2013-10-11  Zalan Bujtas  <zalan@apple.com>

        REGRESSION (r155607): Javascript site does not load visually on panerabread.com
        https://bugs.webkit.org/show_bug.cgi?id=122461

        Reviewed by Simon Fraser.
        
        Do not modify the composited layer backing's internal layer structure directly 
        when the clipping behaviour changes.
        
        When we directly create/destroy RenderLayerBacking::m_ancestorClippingLayer to 
        reflect the new clipping state, other, depending layers need updating. In order to
        not to corrupt the internal hierarchy, mark the compositing layers dirty and let
        the normal updating mechanism take care of creating/destroying the ancestor layers.

        Existing tests are extended.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::checkIfDescendantClippingContextNeedsUpdate):
        (WebCore::RenderLayer::styleChanged):
        * rendering/RenderLayer.h:
        * rendering/RenderLayerBacking.h:

2013-10-10  Ryosuke Niwa  <rniwa@webkit.org>

        Make EventPath private to EventDispatcher.cpp
        https://bugs.webkit.org/show_bug.cgi?id=122638

        Reviewed by Darin Adler.

        Move the declaration of EventPath into EventDispatcher.cpp since EventPath is only used in this file.
        Also make EventDispatcher a namespace since it is never instantiated since r157250.

        * dom/EventDispatcher.cpp:
        (WebCore::EventPath::isEmpty):
        (WebCore::EventPath::size):
        (WebCore::EventPath::contextAt):
        (WebCore::EventPath::lastContextIfExists):
        * dom/EventDispatcher.h:
        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::willDispatchEvent):

2013-10-10  Santosh Mahto  <santosh.ma@samsung.com>

        contentEditable with "position:relative" paragraphs is buggy
        https://bugs.webkit.org/show_bug.cgi?id=33950

        Reviewed by Darin Adler.
